Port agent-plugin unit tests to bazel
However the oldest hermetically available python interpreter is 3.8.

Change-Id: I9cd81e9c99a5ea31e215fab297fe3b671f1f19bc
JIRA-Ref: CMK-25903

--- a/agents/plugins/BUILD
+++ b/agents/plugins/BUILD
@@ -27,3 +27,11 @@ py_binary(
         requirement("simplejson"),
     ],
 )
+
+py_library(
+    name = "agent-plugins",
+    srcs = glob(
+        include = ["**/*.py"],
+    ),
+    visibility = ["//visibility:public"],
+)
