Run all unit tests in one command
* Add a new bazel command, which allows running all unit tests including the ones in /packages and /non-free/packages.
* Some packages are temporary excluded from this command for two main reasons:
1. Tests require some additional precondition steps
2. Tests can't be executed with k8s yet

CMK-26692

Change-Id: Ib4772f98128033dff1af1e79161a4ab72c53af72
(cherry picked from commit 5aa117d2ed01c5a6aab92c866a77adebcd5d3512)

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -188,6 +188,7 @@ py_test(
         "--durations=5",
     ],
     main = "__component_test__.py",
+    tags = ["component"],
     deps = [
         ":__component_test__",
         ":cmk-agent-receiver",
