feat(Relay): agent receiver adds version as header
Change-Id: I13765bc5fd6d6ece6e597abb58cfae29937207c6

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -45,6 +45,7 @@ py_library(
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/activate_config.py",
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/create_task.py",
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/get_tasks.py",
+        "cmk/agent_receiver/relay/api/routers/tasks/handlers/get_version.py",
         "cmk/agent_receiver/relay/api/routers/tasks/handlers/update_task.py",
         "cmk/agent_receiver/relay/api/routers/tasks/libs/config_task_factory.py",
         "cmk/agent_receiver/relay/api/routers/tasks/libs/retrieve_config_serial.py",
