Added perl-Time-Piece as a build dependency for RHEL docker images
Required to build OpenSSL 3.5.3+

CMK-27317

Change-Id: I83b4c6f51843580b6b3f49de03b786c2ef32b2b8

--- a/buildscripts/infrastructure/build-nodes/almalinux-9/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/almalinux-9/Dockerfile
@@ -74,6 +74,7 @@ RUN yum -y makecache \
     perl-IO-Zlib \
     perl-Locale-Maketext-Simple \
     perl-Time-HiRes \
+    perl-Time-Piece \
     perl-devel \
     php \
     postgresql-devel \
