--- a/packages/cmk-plugins/BUILD
+++ b/packages/cmk-plugins/BUILD
@@ -57,6 +57,34 @@ py_test(
 )
 
 py_library(
+    name = "ipmi",
+    srcs = glob([
+        "cmk/plugins/ipmi/**/*.py",
+    ]),
+    imports = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//packages/cmk-plugin-apis:agent_based",
+        "//packages/cmk-plugin-apis:password_store",
+        "//packages/cmk-plugin-apis:rulesets",
+        "//packages/cmk-plugin-apis:server_side_calls",
+        "//packages/cmk-plugin-apis:server_side_programs",
+    ],
+)
+
+py_test(
+    name = "ipmi-test",
+    size = "small",
+    srcs = glob(["tests/cmk/plugins/ipmi/**/*.py"]) + [":__test__.py"],
+    main = ":__test__.py",
+    deps = [
+        ":__test__",
+        ":ipmi",
+        requirement("pytest"),
+    ],
+)
+
+py_library(
     name = "kube",
     srcs = glob([
         "cmk/plugins/kube/**/*.py",
