--- a/requirements.txt
+++ b/requirements.txt
@@ -3470,6 +3470,7 @@ psutil==7.1.3 \
     --hash=sha256:fac9cd332c67f4422504297889da5ab7e05fd11e3c4392140f7370f4208ded1f
     # via
     #   -r cmk/requirements.in
+    #   -r non-free/packages/cmk-otel-collector/requirements.in
     #   -r non-free/packages/cmk-relay-engine/dev-requirements.in
     #   opentelemetry-resourcedetector-process
 psycopg==3.3.2 \
